crates/bevy_ecs/compile_fail/tests/ui/world_query_derive.stderr
error: invalid attribute, expected `mutable`, `derive` or `contiguous`
  --> tests/ui/world_query_derive.rs:14:14
   |
14 | #[query_data(mut)]
   |              ^^^

error[E0277]: the trait bound `&'static mut Foo: ReadOnlyQueryData` is not satisfied
  --> tests/ui/world_query_derive.rs:10:8
   |
10 |     a: &'static mut Foo,
   |        ^^^^^^^^^^^^^^^^ the trait `ReadOnlyQueryData` is not implemented for `&'static mut Foo`
   |
   = help: the following other types implement trait `ReadOnlyQueryData`:
             &Archetype
             &T
             ()
             (F,)
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
           and 40 others
note: required by a bound in `_::assert_readonly`
  --> tests/ui/world_query_derive.rs:7:10
   |
 7 | #[derive(QueryData)]
   |          ^^^^^^^^^ required by this bound in `assert_readonly`
   = note: this error originates in the derive macro `QueryData` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MutableMarked: ReadOnlyQueryData` is not satisfied
  --> tests/ui/world_query_derive.rs:29:8
   |
29 |     a: MutableMarked,
   |        ^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `ReadOnlyQueryData` is not implemented for `MutableMarked`
  --> tests/ui/world_query_derive.rs:22:1
   |
22 | struct MutableMarked {
   | ^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `ReadOnlyQueryData`:
             &Archetype
             &T
             ()
             (F,)
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
           and 40 others
note: required by a bound in `_::assert_readonly`
  --> tests/ui/world_query_derive.rs:26:10
   |
26 | #[derive(QueryData)]
   |          ^^^^^^^^^ required by this bound in `assert_readonly`
   = note: this error originates in the derive macro `QueryData` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
